Added one image on index.html and added comments

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -12,6 +12,7 @@
     <p>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</p>
 
     <p><h2>Ingredients:</h2></p>
+    <!-- unordered list --> 
     <ul>
         <li><strong>Meat:</strong> This super meaty lasagna has sweet Italian sausage and lean ground beef.</li>
         <li><strong>Onion and garlic:</strong> An onion and two cloves of garlic are cooked with the meat to add tons of flavor.</li>
@@ -25,6 +26,7 @@
     </ul>
 
     <p><h2>Steps:</h2></p>
+    <!-- ordered list --> 
     <ol>
         <li>Make the meat sauce.</li>
         <li>Cook the noodles.</li>
