--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>odin_recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <!-- title --> 
+    <h1>Recipes</h1>
+    <!-- image --> 
+    <img src="./images/chef.jpg" height =300 width="400">
+    <!-- unordered list --> 
     <ul>
         <li><a href="recipes/baked-rice.html">Baked Rice</a></li>
         <li><a href="recipes/lasagna.html">Lasagna</a></li>
