--- a/recipes/baked-rice.html
+++ b/recipes/baked-rice.html
@@ -12,6 +12,7 @@
     <p>Baked rice is a foolproof and delicious way to cook leftover rice</p>
 
     <p><h2>Ingredients:</h3></p>
+    <!-- unordered list --> 
     <ul>
         <li>1 cup jasmine rice</li>
         <li>2 ¼ cups water</li>
@@ -21,6 +22,7 @@
     </ul>
 
     <p><h2>Steps:</h3></p>
+    <!-- ordered list --> 
     <ol>
         <li>Preheat the oven to 325 degrees F (165 degrees C). Grease a 2 1/2-quart baking dish.</li>
         <li>Pour rice into the prepared baking dish.</li>
